Fix extra height for stripe form producing an unnecessary space between stripe form and summary on mobile too

--- a/src/activity/activity-book.css
+++ b/src/activity/activity-book.css
@@ -2,10 +2,11 @@
     margin: 0;
     padding: 8px 8px;
     border: none;
-    min-height: 370px;
+    min-height: 330px;
     height: 100%;
     overflow-y: hidden;
     width: 100%;
+    display: none;
 }
 
 abl-activity-book md-card {
